--- a/config.json
+++ b/config.json
@@ -1,6 +1,39 @@
 {
   "crate": {
-    "caenCount": 4
+    "caens": [
+      {
+        "link": 0,
+        "node": 0
+      },
+      {
+        "link": 1,
+        "node": 0
+      },
+      {
+        "link": 2,
+        "node": 0
+      },
+      {
+        "link": 3,
+        "node": 0
+      },
+      {
+        "link": 0,
+        "node": 1
+      },
+      {
+        "link": 1,
+        "node": 1
+      },
+      {
+        "link": 2,
+        "node": 1
+      },
+      {
+        "link": 3,
+        "node": 1
+      }
+    ]
   },
   "experiment": {
     "maxAcquisitionTime": 1,
@@ -26,6 +59,8 @@
     "plasmaPath": "d:/data/db/plasma/raw/",
     "debugPath": "d:/data/db/debug/raw/",
     "logPath": "d:/data/db/logs/",
-    "verboseLevel": 0
+    "verboseLevel": 0,
+    "plasmaShotnPath": "z:/SHOTN.txt",
+    "debugShotnPath": "d:/data/db/debug/SHOTN.txt"
   }
 }
